--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 altair==5.2.0
 attrs==23.2.0
+beautifulsoup4==4.12.2
 blinker==1.7.0
+bz2file==0.98
 cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+cloudpickle==3.0.0
+filelock==3.13.1
+gdown==4.7.1
 gitdb==4.0.11
 GitPython==3.1.40
 idna==3.6
@@ -24,6 +29,7 @@ protobuf==4.25.1
 pyarrow==14.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 referencing==0.32.0
@@ -35,12 +41,14 @@ scipy==1.11.4
 setuptools==68.2.2
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
 streamlit==1.29.0
 tenacity==8.2.3
 threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.4
+tqdm==4.66.1
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
