--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,10 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
+contourpy==1.2.0
+cycler==0.12.1
 filelock==3.13.1
+fonttools==4.47.0
 gdown==4.7.1
 gitdb==4.0.11
 GitPython==3.1.40
@@ -18,8 +21,10 @@ Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
+matplotlib==3.8.2
 mdurl==0.1.2
 numpy==1.26.2
 packaging==23.2
@@ -29,6 +34,7 @@ protobuf==4.25.1
 pyarrow==14.0.2
 pydeck==0.8.1b0
 Pygments==2.17.2
+pyparsing==3.1.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
@@ -38,6 +44,7 @@ rich==13.7.0
 rpds-py==0.16.2
 scikit-learn==1.3.2
 scipy==1.11.4
+seaborn==0.13.1
 setuptools==68.2.2
 six==1.16.0
 smmap==5.0.1
@@ -54,5 +61,6 @@ tzdata==2023.4
 tzlocal==5.2
 urllib3==2.1.0
 validators==0.22.0
+watchdog==3.0.0
 wheel==0.41.2
 zipp==3.17.0
