--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.12.2
 blinker==1.7.0
 bz2file==0.98
 cachetools==5.3.2
+catboost==1.2.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -15,13 +16,16 @@ fonttools==4.47.0
 gdown==4.7.1
 gitdb==4.0.11
 GitPython==3.1.40
+graphviz==0.20.1
 idna==3.6
 importlib-metadata==6.11.0
+importlib-resources==6.1.1
 Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+lightgbm==4.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.2
@@ -30,6 +34,7 @@ numpy==1.26.2
 packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
+plotly==5.18.0
 protobuf==4.25.1
 pyarrow==14.0.2
 pydeck==0.8.1b0
@@ -45,7 +50,6 @@ rpds-py==0.16.2
 scikit-learn==1.3.2
 scipy==1.11.4
 seaborn==0.13.1
-setuptools==68.2.2
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
@@ -62,6 +66,5 @@ tzlocal==5.2
 urllib3==2.1.0
 validators==0.22.0
 watchdog==3.0.0
-wheel==0.41.2
 xgboost==2.0.3
 zipp==3.17.0
